--- a/public/assets/css/media.css
+++ b/public/assets/css/media.css
@@ -8,6 +8,12 @@
         background-position: 50%;
     }
     /*.modal-dialog { width: 90%;  }*/
+    .language {
+        right: -30px;
+    }
+    .centering {
+        height: 625px;
+    }
 }
 @media screen and (max-width: 992px) {}
 
@@ -60,89 +66,6 @@
         margin-top: 25px;
     }
 
-}
-
-@media screen and (max-width: 480px) {
-    .modal-body {
-        flex-direction: column;
-
-    }
-
-    .mimage {
-        display: none;
-    }
-    /*
-    .modal-body > form {
-        width: 100%;
-    }
-
-    .modal-body > form button.close {
-        position: static;
-    }
-
-    div#text3 {
-        padding-top: 2rem;
-    }
-
-    .mimage img {
-        max-height: 148px;
-    }
-    */
-}
-@media screen and (max-width: 425px) {
-    .centering_v2 {flex-direction: column;}
-
-    .absolution {
-        display: none;
-    }
-
-    .centering_v2 {}
-
-    .video {
-        width: 100%;
-    }
-
-    .description {
-        width: 100%;
-    }
-
-    .centering {
-        height: auto;
-    }
-
-    .section2 .container {
-        margin-bottom: 0;
-    }
-
-    .uslugi {}
-
-    .usluga {
-        width: 100%;
-        text-align: center;
-        margin-bottom: 40px;
-    }
-
-    .hexagon_out {
-        text-align: center;
-    }
-
-    .usluga.last {
-        margin: 0;
-    }
-
-    .section4 {
-        width: 100%;
-        box-shadow: none;
-    }
-
-    .list {
-        width: 80%;
-    }
-
-    .list:nth-child(3) {
-        margin-bottom: 100px;
-    }
-
     .for_map {
         flex-direction: column;
     }
@@ -173,6 +96,104 @@
     .for_map.ontop {
         margin-bottom: 75px;
     }
+
+    .address {width: 100%;}
+    .centering_v2 {flex-direction: column;}
+
+    .absolution {
+        display: none;
+    }
+
+    .centering_v2 {}
+
+    .video {
+        width: 100%;
+    }
+
+    .description {
+        width: 100%;
+    }
+
+    .centering {
+        height: auto;
+    }
+
+    .section2 .container {
+        margin-bottom: 0;
+    }
+    .video {
+        height: 350px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    h1 {
+        margin-top: 80px;
+    }
+    span.opennav{
+        display: block;
+    }
+    .modal-body {
+        flex-direction: column;
+
+    }
+
+    .mimage {
+        display: none;
+    }
+
+
+
+    /*
+    .modal-body > form {
+        width: 100%;
+    }
+
+    .modal-body > form button.close {
+        position: static;
+    }
+
+    div#text3 {
+        padding-top: 2rem;
+    }
+
+    .mimage img {
+        max-height: 148px;
+    }
+    */
+}
+@media screen and (max-width: 425px) {
+
+
+
+    .usluga {
+        width: 100%;
+        text-align: center;
+        margin-bottom: 40px;
+    }
+
+    .hexagon_out {
+        text-align: center;
+    }
+
+    .usluga.last {
+        margin: 0;
+    }
+
+    .section4 {
+        width: 100%;
+        box-shadow: none;
+    }
+
+    .list {
+        width: 80%;
+    }
+
+    .list:nth-child(3) {
+        margin-bottom: 100px;
+    }
+
+
 
     div#long {
         display: none;
