--- a/public/assets/css/personal.css
+++ b/public/assets/css/personal.css
@@ -392,6 +392,95 @@ a[href="http://www.faboba.com"] {
 
 
 
+/*Мобильное меню*/
+
+
+
+
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    background-color: #fff;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 90px;
+}
+
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+
+    margin-left: 50px;
+}
+.sidenav .closebtn {
+    top: 0px;
+    right: 20px;
+    font-size: 60px;
+}
+
+span.opennav {
+    position: fixed;
+    right: 20px;
+    top: 20px;
+    font-size: 35px;
+    z-index: 998;
+    background:  #DEB355;
+    border-radius: 15px;
+    padding: 2px 10px;
+    color: #fff;
+}
+
+div#mySidenav {
+    z-index: 999;
+}
+
+.sidenav .closebtn {
+    top: 0px;
+    right: 20px;
+    font-size: 60px;
+}
+
+.sidenav a {
+    margin-bottom: 25px;
+}
+
+div#mySidenav .language {
+    position: relative;
+    display: flex;
+    margin-top: 39px;
+}
+
+div#mySidenav .language a {
+    padding: 0 15px 0 0;
+}
+
+div#mySidenav {}
+
+.sidenav a {
+    color: #000;
+}
+span.opennav{
+    display: none;
+}
+
+
+
 
 
 
@@ -547,7 +636,7 @@ h2 {
 }
 
 .centering {
-  height: 490px;
+    height: 570px;
   display: flex;
   align-items: center;
   position: relative;
@@ -618,7 +707,6 @@ h2 {
   height: 100%;
   background-repeat: no-repeat;
   background-position: 50%;
-  background-image: url(http://placekitten.com/240/240);
   visibility: visible;
   -webkit-transform: rotate(-60deg);
   -moz-transform: rotate(-60deg);
@@ -627,7 +715,7 @@ h2 {
 }
 
 .hexagon-in2:hover
-{   background-image: url(http://placekitten.com/241/241)
+{
 }
 
 
@@ -642,11 +730,14 @@ h2 {
 }
 
 .usluga {
-  width: 13%;
+  width: 14%;
+    position: absolute;
+    padding-left:10px ;
 }
 
 .uslugi {
   display: flex;
+
   justify-content: space-between;
 }
 
@@ -666,7 +757,6 @@ h2 {
   /* text-align: center; */
 }
 
-.usluga:after {content: '';position: absolute;width: 1px;height: 100%;right: -27px;background: #555151;top: 6px;}
 .usluga.last:after{
   content: none;
 }
@@ -893,7 +983,7 @@ form.more_vacancy button:hover {
   padding: 30px 50px;
   position: absolute;
   background: #fff;
-  /* width: 30%; */
+    width: 30%;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
 }
 
